feat: capa 37 - filtres dataLliuramentDes/Fins i producte a GET /panells/empaquetat
